--- a/VHNavigationAppOfficial v 0.1/Info.plist
+++ b/VHNavigationAppOfficial v 0.1/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Application wants to access your location.</string>
 </dict>
 </plist>
